Added OsAssumptions Updated latest jdk to 20 in latest-jdk-module Added some assertAll statements removed unnecessary files