@@ -6,7 +6,6 @@ import org.junit.jupiter.params.provider.ValueSource;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystemException;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -17,12 +16,11 @@ import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
 import java.util.stream.IntStream;
 
+import static hzt.OsAssumptions.assumeIsWindowsOs;
 import static java.nio.file.Files.copy;
 import static java.nio.file.StandardOpenOption.CREATE;
 import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 class PathTests {
 
@@ -39,6 +37,7 @@ class PathTests {
     // because you have to go only one step back to a and then one step forward to b.
     @Test
     void testPathNormalizeAndRelativize() {
+        assumeIsWindowsOs();
         Path path = Paths.get("photos\\..\\beaches\\.\\calangute\\a.txt");
         Path normalizedPath = path.normalize();
         Path oriRelativeToNorm = path.relativize(normalizedPath);
@@ -59,6 +58,8 @@ class PathTests {
     // the argument is simply appended to the path to produce the result.
     @Test
     void testPathRelativize() {
+        assumeIsWindowsOs();
+
         Path p1 = Path.of("photos\\..\\beaches\\.\\calangute\\a.txt");
         Path p2 = Path.of("photos\\a.txt");
         Path p3 = Path.of("photos\\..\\beaches\\.\\calangute\\test\\b.txt");
@@ -73,34 +74,37 @@ class PathTests {
         System.out.println("p1RelativeToSelf = " + p1RelativeToSelf);
         System.out.println("p1RelativeToP3 = " + p1RelativeToP3);
 
-        assertEquals(5, p1RelativeToP2.getNameCount());
-        assertEquals(5, p2RelativeToP1.getNameCount());
-        assertEquals(1, p1RelativeToSelf.getNameCount());
-        assertEquals(3, p1RelativeToP3.getNameCount());
+        assertAll(
+                () -> assertEquals(5, p1RelativeToP2.getNameCount()),
+                () -> assertEquals(5, p2RelativeToP1.getNameCount()),
+                () -> assertEquals(1, p1RelativeToSelf.getNameCount()),
+                () -> assertEquals(3, p1RelativeToP3.getNameCount())
+        );
     }
 
     //    Remember the following points about Path.subpath(int beginIndex, int endIndex)
-//    1. Indexing starts from 0.
-//    2. Root (i.e. c:\) is not considered as the beginning.
-//    3. name at beginIndex is included but name at endIndex is not.
-//    4. paths do not start or end with \.
-//    Thus, if your path is "c:\\a\\b\\c",  subpath(1,1) will cause IllegalArgumentException to be thrown.
-//    subpath(1,2) will correspond to b. subpath(1,3) will correspond to b/c.
-//
-//    Remember the following 4 points about Path.getName() method :
-//    1. Indices for path names start from 0.
-//    2. Root (i.e. c:\) is not included in path names.
-//    3. \ is NOT a part of a path name.
-//    4. If you pass a negative index or a value greater than or equal to the number of elements,
-//    or this path has zero name elements, java.lang.IllegalArgumentException is thrown.
-//
-//    It DOES NOT return null.  Thus, for example,
-//
-//    If your Path is "c:\\code\\java\\PathTest.java",  p1.getRoot() is c:\
-//    ((For Unix based environments, the root is usually / ). p1.getName(0) is code p1.getName(1)
-//    is java p1.getName(2) is PathTest.java p1.getName(3) will cause IllegalArgumentException to be thrown.
+    //    1. Indexing starts from 0.
+    //    2. Root (i.e. c:\) is not considered as the beginning.
+    //    3. name at beginIndex is included but name at endIndex is not.
+    //    4. paths do not start or end with \.
+    //    Thus, if your path is "c:\\a\\b\\c",  subpath(1,1) will cause IllegalArgumentException to be thrown.
+    //    subpath(1,2) will correspond to b. subpath(1,3) will correspond to b/c.
+    //
+    //    Remember the following 4 points about Path.getName() method :
+    //    1. Indices for path names start from 0.
+    //    2. Root (i.e. c:\) is not included in path names.
+    //    3. \ is NOT a part of a path name.
+    //    4. If you pass a negative index or a value greater than or equal to the number of elements,
+    //    or this path has zero name elements, java.lang.IllegalArgumentException is thrown.
+    //
+    //    It DOES NOT return null.  Thus, for example,
+    //
+    //    If your Path is "c:\\code\\java\\PathTest.java",  p1.getRoot() is c:\
+    //    ((For Unix based environments, the root is usually / ). p1.getName(0) is code p1.getName(1)
+    //    is java p1.getName(2) is PathTest.java p1.getName(3) will cause IllegalArgumentException to be thrown.
     @Test
     void testSubPath() {
+        assumeIsWindowsOs();
         Path p1 = Paths.get("c:\\a\\b\\c");
         String x = p1.getName(1).toString();
         String y = p1.subpath(1, 2).toString();
@@ -120,6 +124,7 @@ class PathTests {
 //    code p1.getName(1) is java p1.getName(2) is PathTest.java p1.getName(3) will cause IllegalArgumentException to be thrown.
     @Test
     void testPathGetRootYieldsRootWithSeparator() {
+        assumeIsWindowsOs();
         Path p1 = Paths.get("c:\\main\\project\\Starter.java");
         String root = p1.getRoot().toString();
         final var expected = "c:" + File.separator;
@@ -134,18 +139,17 @@ class PathTests {
 //    If p1 is a symbolic link, then the final target of the link is copied to p2.
     @Test
     void testSymbolicLink() throws IOException {
+        assumeIsWindowsOs();
         Path target = createTextFile();
         assertThrows(PrivilegedActionException.class, () -> createSymbolicLinkAndCopy(target));
     }
 
     private Path createTextFile() throws IOException {
-        var content = IntStream.range(0, 10000)
-                .mapToObj(i -> i + System.lineSeparator())
-                .reduce("", String::concat)
-                .getBytes(StandardCharsets.UTF_8);
 
         Path filePath = Path.of("", "target_link.txt");
-        Files.write(filePath, content, CREATE, TRUNCATE_EXISTING);
+        Files.writeString(filePath, IntStream.range(0, 10000)
+                .mapToObj(i -> i + System.lineSeparator())
+                .reduce("", String::concat), CREATE, TRUNCATE_EXISTING);
         return filePath;
     }
 
